--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,1 +1,1 @@
-h1{text-transform:uppercase;font-family:Arial,Helvetica,sans-serif;font-size:3rem;color:#505050}
+h1{text-transform:uppercase;font-family:Arial,Helvetica,sans-serif;font-size:3rem;color:#00b2c3}
